--- a/src/assets/stylesheets/visualisation.css.scss
+++ b/src/assets/stylesheets/visualisation.css.scss
@@ -108,6 +108,7 @@ $sidebarMaxWidth:500px;
     padding:8px;
     background-color:transparent;
     font-size:16px;
+    margin-left: 0;
 
     li:only-child {
       display: none;
@@ -167,16 +168,6 @@ $sidebarMaxWidth:500px;
         background-color:$whitesmoke;
       }
     }
-
-    .name {
-      word-break:break-all;
-      word-break:break-word;
-
-      -webkit-hyphens:auto;
-      -moz-hyphens:auto;
-      hyphens:auto;
-    }
-
     margin-bottom:150px;
   }
 
